--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="style/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
           <li><a href="examples.html">Examples</a></li>
           <li class="selected"><a href="page.html">A Page</a></li>
           <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html">Наши контакты</a></li>
         </ul>
       </div>
     </div>
